--- a/index.html
+++ b/index.html
@@ -4,67 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hw_01</title>
+    <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!--Header section-->
     <header>
       <nav>
-        <a href=""> WebStudio </a>
-        <ul>
+        <a href="index.html" class="logo"> WEB<span class="logo-part">STUDIO</span> </a>
+        <ul class="main-nav">
           <li>
-            <a href="">Studio</a>
+            <a href="index.html" class="main-nav-site link">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="portfolio.html" class="main-nav-site link">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="main-nav-site link">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="main-nav">
+          <li><a href="mailto:info@devstudio.com" class="main-nav-cnt link">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="main-nav-cnt link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <!--Hero section-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="header1">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
 
       <!--Section 1-->
       <section>
-        <h2>Our advantages</h2>
-        <ul>
+        <h2 class="hide">Our advantages</h2>
+        <ul class="main-nav">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="header-advantage">Strategy</h3>
+            <p class="desc-advantage">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="header-advantage">Punctuality</h3>
+            <p class="desc-advantage">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="header-advantage">Diligence</h3>
+            <p class="desc-advantage">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="header-advantage">Technologies</h3>
+            <p class="desc-advantage">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -74,8 +79,8 @@
 
       <!--Section 2-->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="header2">What are we doing</h2>
+        <ul class="main-nav">
           <li>
             <img
               src="./images/section_2/img_1.jpg"
@@ -104,11 +109,11 @@
       </section>
 
       <!--Section 3-->
-      <section>
-        <h2>Our Team</h2>
+      <section class="section3">
+        <h2 class="header2">Our Team</h2>
 
-        <ul>
-          <li>
+        <ul class="main-nav">
+          <li class="team-card">
             <img
               src="./images/section_3/img_1.jpg"
               alt="Mark Guerrero"
@@ -116,11 +121,11 @@
               height="260"
             >
 
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name-team">Mark Guerrero</h3>
+            <p class="position">Product Designer</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img
               src="./images/section_3/img_2.jpg"
               alt="Tom Ford"
@@ -128,11 +133,11 @@
               height="260"
             >
 
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name-team">Tom Ford</h3>
+            <p class="position">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img
               src="./images/section_3/img_3.jpg"
               alt="Camila Garcia"
@@ -140,11 +145,11 @@
               height="260"
             >
 
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name-team">Camila Garcia</h3>
+            <p class="position">Marketing</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img
               src="./images/section_3/img_4.jpg"
               alt="Daniel Wilson"
@@ -152,15 +157,15 @@
               height="260"
             >
 
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name-team">Daniel Wilson</h3>
+            <p class="position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href=""> WebStudio </a>
-      <p>
+    <footer class="footer">
+      <a href="index.html" class="logo link"> WEB<span class="logo-part2">STUDIO</span> </a>
+      <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
