--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
       <nav>
         <a href="index.html" class="logo"> WEB<span class="logo-part">STUDIO</span> </a>
         <ul class="main-nav">
-          <li>
+          <li class="item">
             <a href="index.html" class="main-nav-site link">Studio</a>
           </li>
-          <li>
+          <li class="item">
             <a href="portfolio.html" class="main-nav-site link">Portfolio</a>
           </li>
-          <li>
+          <li class="item" >
             <a href="" class="main-nav-site link">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul class="main-nav">
-          <li><a href="mailto:info@devstudio.com" class="main-nav-cnt link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="main-nav-cnt link">+11 (000) 111-11-11</a></li>
+          <li class="item"><a href="mailto:info@devstudio.com" class="main-nav-cnt link">info@devstudio.com</a></li>
+          <li class="item"><a href="tel:+110001111111" class="main-nav-cnt link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
